src/objects/Click_Community_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Click_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_Network_ID__c</fullName>
        <label>Community Network ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Page_Prefix__c</fullName>
        <label>Page Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Site_Prefix__c</fullName>
        <label>Site Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Support_Team_Name__c</fullName>
        <label>Support Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Community_User_Name_Prefix__c</fullName>
        <label>Community User Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_Home_Page_URL__c</fullName>
        <label>Home Page URL</label>
        <type>Url</type>
    </fields>
    <label>Community Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Click Community Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>